# OlaUpgrade

./: .env  .env.example  .gitignore  CodePrint.txt  README.md  env.py  main.py  pyproject.toml  requirements.txt  requirments.txt
agent/: base_agent.py  multi_agent.py
api/: server.py
llm/: base.py  factory.py  ollama_client.py  openai_client.py
mcp-server/: mcp_server.py
mcp-server/utils/: logging_config.py
ola_upgrade.egg-info/: PKG-INFO  SOURCES.txt
providers/: news.py  openmeteo.py  search.py  stocks.py
tests/: ALL TESTS.txt  Test-Allocation.ps1  Test-General.ps1  Test-Mixed.ps1  Test-News.ps1  Test-OlaChat.ps1  Test-Search.ps1  Test-Stocks.ps1  Test-Weather.ps1
tools/: mcp_client.py
